2003-05-13  Oliver Kiddle  <opk@zsh.org>

	* 18525: Src/utils.c: add manual UTF-8 conversion as extra
	implementation of \u and \U so it should work on more systems

2003-05-12  Peter Stephenson  <pws@csr.com>

	* 18524: Src/utils.c: sepjoin didn't respect !heap for an empty
	array.  Showed up when vared'ing a zero-length array.

2003-05-12  Oliver Kiddle  <opk@zsh.org>

	* 18520, 13691 (Mario Lang), 13701 (Sven):
	Completion/Unix/Command/_ecasound: completion for ecasound

	* 18520, 15822/15838 (Bruno Bonfils): Completion/Unix/Command/_gpg:
	new completion for gpg

	* 18520 based on 16380, 16541 (Bruno Bonfils) and users/6013
	(GoTaR <gotar@poczta.onet.pl>): Completion/X/Command/_mplayer:
	new completion for mplayer

	* 18519: Completion/Unix/Command/_init_d: was broken due to
	changes in option parsing for the read builtin

2003-05-08  Peter Stephenson  <pws@csr.com>

	* 18512: README, Completion/Unix/Command/_cvs,
	Completion/Unix/Command/_perforce, Completion/Unix/Command/_rsync,
	Completion/Unix/Type/_path_files, Doc/Zsh/expn.yo: 18508 wasn't
	enough; the \\/ hack was documented and in use in the completion
	system.  Change the documentation, mention the inconsistency in
	README and alter the completion system to hide the `/' a parameter
	so that it doesn't care.

2003-05-07  Oliver Kiddle  <opk@zsh.org>

	* users/6083: Completion/Unix/Command/_rlogin,
	Completion/Unix/Command/_ssh: get hostname from IPREFIX instead
	of words[CURRENT] to avoid quote characters

	* Michał Politowski: users/6080: Completion/Unix/Command/_ssh:
	remove one level of quoting on files before using with remote ls

2003-05-07  Peter Stephenson  <pws@csr.com>

	* 18508: Src/subst.c, Test/D04parameter.ztst: quoting of the `/'
	separating source and replacment text in ${foo//bar/stuff} was
	buggy.

2003-05-06  Peter Stephenson  <pws@csr.com>

	* Koen van Hoo: zsh-users/6049: Src/utils.c: actually in
	4.1.1-test-2 but not documented: don't make terminal window size